error
srcs/parse_objects.c:20:11: error: no member named 'normal_func' in 'struct s_object'
        rsphere->normal_func = normal_sphere;
        ~~~~~~~  ^
srcs/parse_objects.c:38:10: error: no member named 'normal_func' in 'struct s_object'
        rplane->normal_func = normal_plane;
        ~~~~~~  ^
srcs/parse_objects.c:58:9: error: no member named 'normal_func' in 'struct s_object'
        rcone->normal_func = normal_cone;
        ~~~~~  ^
srcs/parse_objects.c:79:8: error: no member named 'normal_func' in 'struct s_object'
        rcyl->normal_func = normal_cylinder;
        ~~~~  ^
4 errors generated.
make[1]: *** [objs/parse_objects.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [opti] Error 2
